[tool.poetry]
name = "glassmirror"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["mamerisawesome <atmalmer23@gmail.com>"]
license = "MIT"
packages = [
    { include = "glassmirror" },
]

[tool.poetry.scripts]
train = "glassmirror:train"

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
